syntax = "proto3";

option java_package = "bob.colbaskin.hack.datastore";
option java_multiple_files = true;

enum AuthStatus {
  NOT_AUTHENTICATED = 0;
  AUTHENTICATED = 1;
}
