syntax = "proto3";

import "auth_status.proto";
import "onboarding_status.proto";
import "user_role.proto";

option java_package = "bob.colbaskin.dgtu_2025_autumn.datastore";
option java_multiple_files = true;

message UserPreferencesProto {
  OnboardingStatus onboardingStatus = 1;
  AuthStatus authStatus = 2;
  UserRole userRole = 3;
  int32 userId = 4;
  string userName = 5;
  string userEmail = 6;
}
